terraform/kuard-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - kuard.dev.greenlight.coop
    secretName: quickstart-example-tls
  rules:
  - host: kuard.dev.greenlight.coop
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
